# Remy

./: app.py  pyproject.toml
recipes/: bacon_wrapped_potatoes  baked_bean_burger.json  beans_on_toast.json  cheats_kedgree.json  pasta_salad  pasta_with_salmon_and_peas.json  pesto_pasta.json  sausage_and_bean_stew.json  spanish_omelette.json  tomato_and_basil_omelette.json  wedges.json
