[tool.poetry]
name = "remy"
version = "0.1.0"
description = ""
authors = ["Daudi Wampamba <wampamba.daudi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
matplotlib = "^3.2.2"
numpy = "^1.18.5"
opencv-python = "^4.1.1"
Pillow = "^7.1.2"
PyYAML = "^5.3.1"
requests = "^2.23.0"
scipy = "^1.4.1"
torch = "^1.7.0"  # see https://pytorch.org/get-started/locally/ (recommended)
torchvision = "^0.8.1"
tqdm = "^4.64.0"
# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
tensorboard = "^2.4.1"
pandas = "^1.1.4"
seaborn = "^0.11.0"
thop = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
